PROTON-905: Revert "PROTON-905: fix to prevent crash with latest qpidd"

This reverts commit d9ce3cfd0916ae3719cb39a83a6174c5f88b10bb.

The latest qpidd is crashing due to the PROTON-905 fix whilst running
the HA tests.